[Fix] Overflow-x on section

--- a/app/components/Section/Section.scss
+++ b/app/components/Section/Section.scss
@@ -4,7 +4,7 @@
 
 .Section {
   max-width: 100vw;
-  // overflow-x: hidden;
+  overflow-x: hidden;
   margin: 20px 0;
 
   @include v.viewport-sm {
